# Sen8

./: CMakeLists.txt  CNAME  LICENSE.md  README.md  console.c  console.h  core.c  core.h  customLog.c  customLog.h  doubleLinkedList.c  doubleLinkedList.h  editor.c  editor.h  editor.lua  flexString.c  flexString.h  font.inl  fontGenerator.c  game.html  game.js  game.wasm  graphics.c  graphics.h  index.html  index.js  index.wasm  lua.c  lua.h  makefile  minshell.html  os.c  os.h  os.lua  osCgenerator.c  oslua.c  script.lua  shell.html  types.h
editor/: editor.c  editor.h  prova.lua  scriptEditor.c  scriptEditor.h  tileEditor.c  tileEditor.h
oldStuff/: fontGenerator.c
types/: doubleLinkedList.c  doubleLinkedList.h  flexString.c  types.h
